--- a/app/templates/app/lista_candidatos.html
+++ b/app/templates/app/lista_candidatos.html
@@ -7,10 +7,10 @@
 </div>
 
 <table class="table">
-    <tr><th>Nome do candidato</th><th>Período</th><th>Faculdade</th></tr>
+    <tr><th>Nome do candidato</th><th>rg</th><th>cpf</th><th>endereço</th><th>telefone</th></tr>
         {% for candidato in candidatos %}
-          <tr><td>{{ candidato.nome }}</td><td>{{ candidato.rg }}</td><td>{{ curso.cpf }}</td><td>{{ curso.endereço }}</td>
-    <td>{{ curso.telefone }}</td></tr>
+          <tr><td>{{ candidato.nome }}</td><td>{{ candidato.rg }}</td><td>{{ candidato.cpf }}</td><td>{{ candidato.endereço }}</td>
+    <td>{{ candidato.telefone }}</td></tr>
         {% endfor %}
 </table>
 
